# alert-project-repo

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/alert_project/: __init__.py  alerts.py  benchmark.py  cli.py  config.py  engine.py  ingestion.py  models.py
src/alert_project/rules/: __init__.py  base.py  bundle_fatal_errors.py  global_fatal_errors.py
tests/: test_alert_sinks.py  test_benchmark.py  test_rules.py
